# apache-beam-training

./: .gitignore  README.md  WORKSPACE  settings.gradle.kts
.github/workflows/: java.yml  python.yml  test.yml
app/: Sample.txt  build.gradle.kts  input-record.txt
app/src/main/java/apachebeamtraining/: App.java  BatchResult.java  CryptoCurrency.java  Failure.java  MultipleOutput.java
app/src/test/java/apachebeamtraining/: AppTest.java
docs/: 01-first-apache-beam-application.md  02-pardo-and-dofn-parallel-processing.md  03-kv-groupbykey-aggregation.md  04-mapelement-simplefunction-pardo-dofn.md  05-kv-with-custom-class-and-groupintobatches.md  06-multioutput-failure-handling.md  07-multioutput-with-different-types.md  08-read-from-pubsub.md
docs/bazel/: 01-introduce-bazel.md
docs/java/: 01-first-apache-beam-application.md  03-kv-groupbykey-aggregation.md  05-kv-with-custom-class-and-groupintobatches.md  06-multioutput-failure-handling.md  07-multioutput-with-different-types.md  08-read-from-pubsub.md
docs/python/: 01-read-and-write-pubsub.md  02-read-and-write-pubsub-proto-message.md
java/: README.md
java/app/: build.gradle.kts
java/app/src/main/java/apachebeamtraining/: BatchResult.java
java/app/src/test/java/apachebeamtraining/: AppTest.java
proto/wordcount/: BUILD.bazel  wordcount.proto
python/: .flake8  BUILD.bazel  Makefile  README.md  pyproject.toml  streaming_wordcount.py  streaming_wordcount_proto.py  wordcount_pb2.py
