load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")

proto_library(
    name = "proto",
    strip_import_prefix = "/proto",
    srcs = [
        "wordcount.proto",
    ],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "py_proto",
    deps = [
        ":proto",
    ],
    visibility = ["//visibility:public"],
)
